# jenkins-docker-base

./: .ansible-lint  Dockerfile  Makefile  README.md  casc.yaml  create_container.yml  plugins.txt  pyproject.toml  renovate.json  tests.py
.config/: ansible-lint.yml
.github/: autotag.py  tagrepo.py
.github/workflows/: release.yaml  test.yaml
torkel/: Dockerfile  casc.yaml  reference.txt
