[tool.poetry]
name = "jenkins-docker-base"
version = "1.0.0"
description = "A Jenkins docker image used to serve as a base for other Jenkins images"
authors = ["Conner Crosby <conner@cavcrosby.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.5"
ansible = "5.5.0"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]
ansible-lint = "5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
